--SQLPlus Query Metrics: Version 1.1--
Implemented variables to specify the runtime configuration for the docker application

Shell scripts:
	docker/src/sh_script_config/project_config.sh was added as a configuration file used in the prepare docker and build/deploy docker scripts

	docker/src/run_query_metrics.sh was updated to load the shell script configuration file and use the values defined in it.  Also updated to add a date/time suffix to the .csv export files from each query used to capture metrics

	Prepare docker scripts (updated to include shell script configuration file and implement the variable):
		deployment_scripts/prepare_docker_project.hybrid.sh
		deployment_scripts/prepare_docker_project.local.sh
		deployment_scripts/prepare_docker_project.remote.sh

	Build/Deploy docker scripts  (updated to include shell script configuration file and implement the variable):
		deployment_scripts/build_deploy_project.hybrid.sh
		deployment_scripts/build_deploy_project.local.sh
		deployment_scripts/build_deploy_project.remote.sh

SQLPlus scripts:
	docker/src/SQL/sqlplus_config/runtime_config.sql was added as a configuration file used in the query_metrics_export.sql file

	Calling scripts (updated to run the SQLPlus configuration file):
		docker/src/SQL/query_metrics_calling_script.hybrid.sql
		docker/src/SQL/query_metrics_calling_script.local.sql
		docker/src/SQL/query_metrics_calling_script.remote.sql

	docker/src/SQL/query_metrics_export.sql was updated to use the variable values instead of hard-coding them

docker/Dockerfile was updated to convert project_config.sh line endings to linux line endings

README.md was updated to reference the new configuration files to simplify the process

todo.txt was updated with items that were implemented or planned for implementation

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,7 +7,8 @@ RUN yum install dos2unix \
 COPY ./src /usr/src
 
 # convert the shell script to unix line endings
-RUN dos2unix /usr/src/run_query_metrics.sh
+RUN dos2unix /usr/src/run_query_metrics.sh \
+&& dos2unix /usr/src/sh_script_config/project_config.sh
 
 # change directory to the SQL source directory
 WORKDIR /usr/src/SQL
