--SQLPlus Query Metrics: Version 1.2--
implemented a traceroute feature for the docker application to execute in a loop while the query metrics are being captured.

Documentation:
	README.md was updated with the updated standalone and forked repository implementation procedures
	todo.txt was updated with items that were implemented and notes about the attempts to extract the query execution time information
	docker/docker notes.txt was created with notes about the project

bash scripts:

	Deployment scripts (updated to reference the deployment configuration file - project_deploy_config.sh):
		deployment_scripts/build_deploy_project.hybrid.sh
		deployment_scripts/build_deploy_project.local.sh
		deployment_scripts/build_deploy_project.remote.sh

	Preparation scripts  (updated to reference the deployment configuration file - project_deploy_config.sh):
		deployment_scripts/prepare_docker_project.hybrid.sh
		deployment_scripts/prepare_docker_project.local.sh
		deployment_scripts/prepare_docker_project.remote.sh

	main script: docker/src/run_query_metrics.sh was moved into the scripts folder: docker/src/scripts/run_query_metrics.sh
	created new shell scripts for running the traceroute (docker/src/scripts/traceroute.sh) and for running the traceroute in a loop (docker/src/scripts/traceroute_loop.sh)

	bash script configuration files:
		docker/src/sh_script_config/project_config.sh was removed in favor of splitting into two configuration files
		docker/src/scripts/sh_script_config/project_deploy_config.sh was created to define the deployment variables
		docker/src/scripts/sh_script_config/project_runtime_config.sh was created to define the runtime variables

	Separated out the project scenario variables into a separate include file that is renamed depending on which scenario is being used
		docker/src/scripts/sh_script_config/project_scenario_config.hybrid.sh
		docker/src/scripts/sh_script_config/project_scenario_config.local.sh
		docker/src/scripts/sh_script_config/project

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,16 +1,16 @@
 FROM ghcr.io/oracle/oraclelinux8-instantclient:19
 
-RUN yum install dos2unix \
+RUN yum install dos2unix traceroute \
 && yum clean all
 
 # copy the rest of the backend files:
 COPY ./src /usr/src
 
 # convert the shell script to unix line endings
-RUN dos2unix /usr/src/run_query_metrics.sh \
-&& dos2unix /usr/src/sh_script_config/project_config.sh
+RUN dos2unix /usr/src/scripts/*.sh \
+&& dos2unix /usr/src/scripts/sh_script_config/*.sh
 
 # change directory to the SQL source directory
 WORKDIR /usr/src/SQL
 
-CMD ["bash", "../run_query_metrics.sh"]
+CMD ["bash", "../scripts/run_query_metrics.sh"]
